--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-./my-app/node_modules
+/my-app/node_modules
 /.pnp
 .pnp.js
 
 # testing
-./my-app/coverage
+/my-app/coverage
 
 # production
-./my-app/build
+/my-app/build
 
 # misc
 .DS_Store
